# risker-v2

./: .gitignore  CLIENT_STRUCTURE.md  GAME.md  IDEA.md  INFRA.md  README.md  SERVER_STRUCTURE.md  package.json
client/: package-lock.json  package.json  webpack.config.js
client/src/: App.tsx  index.html  index.js  index.tsx  theme.ts
client/src/components/: Chat.tsx  GameLobby.tsx  Layout.tsx  Lobby.tsx  LobbyConfig.tsx  Matchmaking.tsx
client/src/hooks/: useGame.ts
client/src/pages/: Battle.tsx  Game.tsx  Home.tsx
client/src/services/: gameClient.ts  websocket.ts
server/: pyproject.toml
server/src/: server.py
server/src/database/: base.py  sqlite.py
server/src/models/: __init__.py  game.py
server/src/network/: server.py
